Added lasagna recipie

--- a/01-recipes/index.html
+++ b/01-recipes/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="UTF-8">
         <title>Odin Recipies</title>
     </head>
     <body>
         <h1>Odin Recipes</h1>
+
+        <p>Welcome to Odin Recipies! Our chefs selected some good recipies for you, choose the one you like!</p>
+
+        <ul>
+            <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        </ul>
     </body>
 </html>
