--- a/01-recipes/index.html
+++ b/01-recipes/index.html
@@ -11,6 +11,7 @@
 
         <ul>
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="recipes/brownie-pie.html">Brownie pie</a></li>
         </ul>
     </body>
 </html>
