--- a/01-recipes/index.html
+++ b/01-recipes/index.html
@@ -12,6 +12,7 @@
         <ul>
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
             <li><a href="recipes/brownie-pie.html">Brownie pie</a></li>
+            <li><a href="recipes/risotto.html">Lobster risotto</a></li>
         </ul>
     </body>
 </html>
