--- a/01-recipes/index.html
+++ b/01-recipes/index.html
@@ -10,8 +10,8 @@
         <p>Welcome to Odin Recipies! Our chefs selected some good recipies for you, choose the one you like!</p>
 
         <ul>
-            <li><a href="recipes/lasagna.html">Lasagna</a></li>
-            <li><a href="recipes/brownie-pie.html">Brownie pie</a></li>
+            <li><a href="recipes/lasagna.html">Chicken taco lasagna</a></li>
+            <li><a href="recipes/brownie-pie.html">Imposible brownie pie</a></li>
             <li><a href="recipes/risotto.html">Lobster risotto</a></li>
         </ul>
     </body>
