--- a/01-recipes/index.html
+++ b/01-recipes/index.html
@@ -7,6 +7,7 @@
     <body>
         <h1>Odin Recipes</h1>
 
+        <img src="logo.png">
         <p>Welcome to Odin Recipies! Our chefs selected some good recipies for you, choose the one you like!</p>
 
         <ul>
