--- a/01-recipes/index.html
+++ b/01-recipes/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Odin Recipies</title>
+        <title>Odin Recipes</title>
     </head>
     <body>
         <h1>Odin Recipes</h1>
 
         <img src="logo.png">
-        <p>Welcome to Odin Recipies! Our chefs selected some good recipies for you, choose the one you like!</p>
+        <p>Welcome to Odin Recipes! Our chefs selected some good recipies for you, choose the one you like!</p>
 
         <ul>
             <li><a href="recipes/lasagna.html">Chicken taco lasagna</a></li>
