--- a/01-recipes/recipes/brownie-pie.html
+++ b/01-recipes/recipes/brownie-pie.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Brownie pie recipie</title>
+        <title>Brownie pie recipe</title>
     </head>
     <body>
         <h1>Impossible Brownie Pie</h1>
