--- a/01-recipes/recipes/risotto.html
+++ b/01-recipes/recipes/risotto.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Lobster risotto</title>
+        <title>Lobster risotto recipe</title>
     </head>
     <body>
         <h1>Lobster risotto</h1>
