--- a/01-recipes/recipes/lasagna.html
+++ b/01-recipes/recipes/lasagna.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Lasagna recipie</title>
+        <title>Lasagna recipe</title>
     </head>
     <body>
         <h1>Chicken taco lasagna</h1>
