--- a/01-recipes/index.html
+++ b/01-recipes/index.html
@@ -8,7 +8,7 @@
         <h1>Odin Recipes</h1>
 
         <img src="logo.png">
-        <p>Welcome to Odin Recipes! Our chefs selected some good recipies for you, choose the one you like!</p>
+        <p>Welcome to Odin Recipes! Our chefs selected some good recipes for you, choose the one you like!</p>
 
         <ul>
             <li><a href="recipes/lasagna.html">Chicken taco lasagna</a></li>
