Added landing page project

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
         <div id="container">
             <p>Welcome to my <em>The odin project</em> repository, take a look at my projects!</p>
 
-            <ol>
-                <li><a href="01-recipes/index.html">Recipes</a></li>
-            </ol>
+            <a href="01-recipes/index.html">Recipes</a>
+            <a href="02-landing-page/index.html">Landing page</a>
         </div>
 
         <footer>
