--- a/02-landing-page/index.html
+++ b/02-landing-page/index.html
@@ -7,6 +7,104 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Landing page</h1>
+        <div id="navbar">
+            <div class="navbar__logo">
+                <p>Header Logo</p>
+            </div>
+
+            <div class="navbar__item">
+                <a>header link one</a>
+            </div>
+
+            <div class="navbar__item">
+                <a>header link two</a>
+            </div>
+
+            <div class="navbar__item">
+                <a>header link three</a>
+            </div>
+        </div>
+
+        <div class="wrapper" id="sect-1">
+            <div class="sect-1__text-container">
+                <h1>This website is awesome</h1>
+                <p>
+                    This website has some subtext that goes
+                    here under the main title. It's a smaller font
+                    and the color is lower contrast
+                </p>
+                <div class="button sect-1__text-container__button"><p>Sign Up</p></div>
+            </div>
+
+            <div class="sect-1__placeholder">
+                <p>this is a placeholder for an image</p>
+            </div>
+        </div>
+        
+        <div class="wrapper" id="sect-2">
+            <h2 class="sect-2__title">Some random information.</h2>
+
+            <div class="sect-2__container">
+                <div class="sect-2__card">
+                    <div class="sect-2__card__image-container"><img></div>
+                    <div class="sect-2__card__text"><p>
+                        this is some subtext under an illustration or image
+                    </p></div>
+                </div>
+
+                <div class="sect-2__card">
+                    <div class="sect-2__card__image-container"><img></div>
+                    <div class="sect-2__card__text"><p>
+                        this is some subtext under an illustration or image
+                    </p></div>
+                </div>
+
+                <div class="sect-2__card">
+                    <div class="sect-2__card__image-container"><img></div>
+                    <div class="sect-2__card__text"><p>
+                        this is some subtext under an illustration or image
+                    </p></div>
+                </div>
+
+                <div class="sect-2__card">
+                    <div class="sect-2__card__image-container"><img></div>
+                    <div class="sect-2__card__text"><p>
+                        this is some subtext under an illustration or image
+                    </p></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="wrapper" id="sect-3">
+            <p class="sect-3__quote">
+                This is an inspiring quote, or a testimonial from a customer. Maybe it's just
+                filling up space, or maybe people will actually read it. Who knows? All I know is
+                that it looks nice.
+            </p>
+            <p class="sect-3__author">
+                <p>-Thor, God of Thunder</p>
+            </p>
+        </div>
+
+        <div class="wrapper" id="sect-4">
+            <div class="sect-4__cta">
+                <div class="sect-4__cta__container">
+                    <div class="sect-4__cta__title">
+                        Call to action! It's time!
+                    </div>
+                    <div class="sect-4__cta__description">
+                        Sign up for our product by clicking that button right over there!
+                    </div>
+                </div>
+
+                <div class="button">
+                    <p>Sign up</p>
+                </div>
+            </div>
+        </div>
+
+        <div id="footer">
+            <p>Copyright © alesbe 2022</p>
+        </div>
     </body>
 </html>
