--- a/02-landing-page/index.html
+++ b/02-landing-page/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Landing page</title>
 
-        <link rel="stylesheet" href="./styles.css">
+        <link rel="stylesheet" href="02-landing-page/styles.css">
     </head>
     <body>
         <div class="navbar">
