--- a/02-landing-page/index.html
+++ b/02-landing-page/index.html
@@ -78,15 +78,17 @@
         </div>
 
         <div class="wrapper" id="sect-3">
-            <p class="sect-3__quote">
-                This is an inspiring quote, or a testimonial from a customer. Maybe it's just
-                filling up space, or maybe people will actually read it. Who knows? All I know is
-                that it looks nice.
-            </p>
-            <p class="sect-3__author">
-                <p>-Thor, God of Thunder</p>
-            </p>
+            <div id="sect-3__container">
+                <p id="sect-3__quote">
+                    This is an inspiring quote, or a testimonial from a customer. Maybe it's just
+                    filling up space, or maybe people will actually read it. Who knows? All I know is
+                    that it looks nice.
+                </p>
+                <p id="sect-3__author">-Thor, God of Thunder</p>
+            </div>
         </div>
+
+        <hr>
 
         <div class="wrapper" id="sect-4">
             <div class="sect-4__cta">
