Added basic style

--- a/03-rock-paper-scissors-lizard-spock/index.html
+++ b/03-rock-paper-scissors-lizard-spock/index.html
@@ -8,54 +8,54 @@
     <link rel="stylesheet" href="styles.css">
     <body>
         <div id="wrapper">
-            <h1>Rock, paper, scissors, lizard, spock!</h1>
+            <p id="title">Rock, paper, scissors, lizard, spock!</p>
 
             <div id="options">
                 <div class="option" id="rock-container">
                     <div class="option__image">
-                        <img>
+                        <img src="images/rock.png">
                     </div>
-                    <div class="option__text">Rock</div>
+                    <p class="option__text">Rock</p>
                 </div>
 
                 <div class="option" id="paper-container">
                     <div class="option__image">
-                        <img>
+                        <img src="images/paper.png">
                     </div>
-                    <div class="option__text">Paper</div>
+                    <p class="option__text">Paper</p>
                 </div>
 
                 <div class="option" id="scissors-container">
                     <div class="option__image">
-                        <img>
+                        <img src="images/scissors.png">
                     </div>
-                    <div class="option__text">Scissors</div>
+                    <p class="option__text">Scissors</p>
                 </div>
 
                 <div class="option" id="lizard-container">
                     <div class="option__image">
-                        <img>
+                        <img src="images/lizard.png">
                     </div>
-                    <div class="option__text">Lizard</div>
+                    <p class="option__text">Lizard</p>
                 </div>
 
                 <div class="option" id="spock-container">
                     <div class="option__image">
-                        <img>
+                        <img src="images/spock.png">
                     </div>
-                    <div class="option__text">Spock</div>
+                    <p class="option__text">Spock</p>
                 </div>
             </div>
 
-            <div id="score-wrapper">
-                <div class="score-container">
-                    <h1>You</h1>
-                    <h2 id="score-player">0</h2>
+            <div id="score__wrapper">
+                <div class="score__container">
+                    <p class="score__title">You</p>
+                    <p class="score__points" id="score-player">0</p>
                 </div>
 
-                <div class="score-container">
-                    <h1>Computer</h1>
-                    <h2 id="score-computer">0</h2>
+                <div class="score__container">
+                    <p class="score__title">Computer</p>
+                    <p class="score__points" id="score-computer">0</p>
                 </div>
             </div>
 
