Changed function name playerChoosed() to playerChoose()

--- a/03-rock-paper-scissors-lizard-spock/index.html
+++ b/03-rock-paper-scissors-lizard-spock/index.html
@@ -11,35 +11,35 @@
             <p id="title">Rock, paper, scissors, lizard, spock!</p>
 
             <div id="options">
-                <div class="option" id="rock-container" onclick="playerChoosed('rock')">
+                <div class="option" id="rock-container" onclick="playerChoose('rock')">
                     <div class="option__image">
                         <img src="images/rock.png">
                     </div>
                     <p class="option__text">Rock</p>
                 </div>
 
-                <div class="option" id="paper-container" onclick="playerChoosed('paper')">
+                <div class="option" id="paper-container" onclick="playerChoose('paper')">
                     <div class="option__image">
                         <img src="images/paper.png">
                     </div>
                     <p class="option__text">Paper</p>
                 </div>
 
-                <div class="option" id="scissors-container" onclick="playerChoosed('scissors')">
+                <div class="option" id="scissors-container" onclick="playerChoose('scissors')">
                     <div class="option__image">
                         <img src="images/scissors.png">
                     </div>
                     <p class="option__text">Scissors</p>
                 </div>
 
-                <div class="option" id="lizard-container" onclick="playerChoosed('lizard')">
+                <div class="option" id="lizard-container" onclick="playerChoose('lizard')">
                     <div class="option__image">
                         <img src="images/lizard.png">
                     </div>
                     <p class="option__text">Lizard</p>
                 </div>
 
-                <div class="option" id="spock-container" onclick="playerChoosed('spock')">
+                <div class="option" id="spock-container" onclick="playerChoose('spock')">
                     <div class="option__image">
                         <img src="images/spock.png">
                     </div>
