Animate and update scores

--- a/03-rock-paper-scissors-lizard-spock/index.html
+++ b/03-rock-paper-scissors-lizard-spock/index.html
@@ -47,6 +47,10 @@
                 </div>
             </div>
 
+            <div id="result__wrapper">
+                <p id="result__text">Oh no! Rock crushes lizard!</p>
+            </div>
+
             <div id="score__wrapper">
                 <div class="score__container">
                     <p class="score__title">You</p>
