Made static grid and random hover colors

--- a/04-etch-a-sketch/index.html
+++ b/04-etch-a-sketch/index.html
@@ -7,7 +7,44 @@
 
     <link rel="stylesheet" href="styles.css">
     <body>
-        <h1>Etch-a-Sketch</h1>
+        <div id="wrapper">
+
+            <p id="title">Etch-a-Sketch</p>
+            
+            <div id="grid__container">
+                <div class="grid__row">
+                    <div class="grid__item"></div>
+                    <div class="grid__item"></div>
+                    <div class="grid__item"></div>
+                    <div class="grid__item"></div>
+                </div>
+                <div class="grid__row">
+                    <div class="grid__item"></div>
+                    <div class="grid__item"></div>
+                    <div class="grid__item"></div>
+                    <div class="grid__item"></div>
+                </div>
+                <div class="grid__row">
+                    <div class="grid__item"></div>
+                    <div class="grid__item"></div>
+                    <div class="grid__item"></div>
+                    <div class="grid__item"></div>
+                </div>
+                <div class="grid__row">
+                    <div class="grid__item"></div>
+                    <div class="grid__item"></div>
+                    <div class="grid__item"></div>
+                    <div class="grid__item"></div>
+                </div>
+            </div>
+
+            <div id="options__wrapper">
+                <div class="options__container">
+                    <p>Grid size: </p>
+                    <input type="text" id="grid-size__input" placeholder="Size...">
+                </div>
+            </div>
+        </div>
             
         <script src="script.js"></script>
     </body>
