Added footer and change background colors for better readability

--- a/04-etch-a-sketch/index.html
+++ b/04-etch-a-sketch/index.html
@@ -28,6 +28,12 @@
             </div>
         </main>
 
+        <footer>
+            <div id="footer-container">
+                <p>Made with </p><img src="heart.png" id="heart"><p> by <a href="https://github.com/alesbe">alesbe</a></p>
+            </div>
+        </footer>
+            
         <script src="script.js"></script>
     </body>
 </html>
