--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>The Odin Project Repository</title>
+        
+        <link rel="stylesheet" href="styles.css">
     </head>
 
-    <link rel="stylesheet" href="styles.css">
     <body>
         <div id="container">
             <p>Welcome to my <em>The odin project</em> repository, take a look at my projects!</p>
@@ -14,6 +15,7 @@
             <a href="02-landing-page/index.html">Landing page</a>
             <a href="03-rock-paper-scissors-lizard-spock/index.html">Rock, paper, scissors, lizard, spock!</a>
             <a href="04-etch-a-sketch/index.html">Etch-a-Sketch</a>
+            <a href="05-calculator/index.html">Calculator</a>
         </div>
 
         <footer>
