Added button functionality and display

--- a/05-calculator/index.html
+++ b/05-calculator/index.html
@@ -10,8 +10,8 @@
     <body>
         <div id="calculator__container">
             <div id="display">
-                <p id="result__small">3 + 5</p>
-                <p id="result__big">1234</p>
+                <p id="result__small">0</p>
+                <p id="result__big">0</p>
             </div>
 
             <div id="button__container">
