Added switch sign and started with validations

--- a/05-calculator/index.html
+++ b/05-calculator/index.html
@@ -17,7 +17,7 @@
             <div id="button__container">
                 <div class="button__row">
                     <div class="button button--light-grey" id="btn__C"><p>C</p></div>
-                    <div class="button button--light-grey" id="btn__pow"><p>pow</p></div>
+                    <div class="button button--light-grey" id="btn__sign"><p>+/-</p></div>
                     <div class="button button--light-grey" id="btn__del"><p>del</p></div>
                     <div class="button button--orange" id="btn__/"><p>/</p></div>
                 </div>
